# agentic-rag

./: .dockerignore  .gitignore  Dockerfile  README.md  chat.py  docker-compose.yml  graph1.py  graph_memory.py  graph_react.py  ingest.py  main.py  pyproject.toml  rag-langgraph.py  rag.py  streamlit.py  utils.py  workflow.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
