[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.9.0",
    "llama-index>=0.14.3",
    "llama-index-embeddings-gemini>=0.4.1",
    "llama-index-llms-gemini>=0.6.1",
    "python-dotenv>=1.1.1",
]
