[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.9.0",
    "chromadb>=1.1.1",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.6",
    "langchain-community>=0.3.30",
    "langchain-elasticsearch>=0.3.2",
    "langchain-google-genai>=2.0.10",
    "langchain-openai>=0.3.34",
    "langchain-text-splitters>=0.3.11",
    "langchainhub>=0.1.21",
    "langgraph>=0.6.8",
    "lark>=1.3.0",
    "python-dotenv>=1.1.1",
    "streamlit>=1.50.0",
    "tiktoken>=0.11.0",
]
